--- a/www.nass.gov.ng/0a581cbd2e00adf943da88bf4abec6b8a66698e9.yml
+++ b/www.nass.gov.ng/0a581cbd2e00adf943da88bf4abec6b8a66698e9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:16:32 GMT
+    - Wed, 15 Aug 2018 18:24:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=0ZQSPRvcwZMG5QSCEds9y3; path=/
+    - PHPSESSID=%2CwZJ7S-clYgF8MFkMQN8y0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:16:32 GMT
+recorded_at: Wed, 15 Aug 2018 18:24:47 GMT
