--- a/www.nass.gov.ng/9469070c184df07b0b9476cd9dc91a8bdedb0993.yml
+++ b/www.nass.gov.ng/9469070c184df07b0b9476cd9dc91a8bdedb0993.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:19:05 GMT
+    - Wed, 15 Aug 2018 18:27:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=gwq1kRgwSjvexyWjLrvNR2; path=/
+    - PHPSESSID=xtjttCbIjc%2CIeUu5Ee1et3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:19:05 GMT
+recorded_at: Wed, 15 Aug 2018 18:27:30 GMT
