--- a/www.nass.gov.ng/74ea3f5f1f166bf72bfc68076b62da648586cd28.yml
+++ b/www.nass.gov.ng/74ea3f5f1f166bf72bfc68076b62da648586cd28.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:19:54 GMT
+    - Wed, 15 Aug 2018 18:29:02 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B31xMTeY9Zjo4vus34fPb3; path=/
+    - PHPSESSID=JnBLtRVanA2E%2C%2C3lDYCAB3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:19:54 GMT
+recorded_at: Wed, 15 Aug 2018 18:29:02 GMT
