--- a/www.nass.gov.ng/78480bc63161e965b41d1124590eb44137832b63.yml
+++ b/www.nass.gov.ng/78480bc63161e965b41d1124590eb44137832b63.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:28:52 GMT
+    - Wed, 15 Aug 2018 18:39:21 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=aC6qJ80ogwHIpn3f4wa6d3; path=/
+    - PHPSESSID=2VvjL0%2CNnuXAg0MUod2zX1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:28:52 GMT
+recorded_at: Wed, 15 Aug 2018 18:39:21 GMT
