--- a/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
+++ b/www.nass.gov.ng/1890bdc512eb7cd7a8e625b99ef9fe7e496575cd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:30:48 GMT
+    - Wed, 15 Aug 2018 18:41:23 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wx0S1KHw-yYOttlYQUX-F1; path=/
+    - PHPSESSID=VeNvtORx8T32f5eCVEB%2Cq0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:30:48 GMT
+recorded_at: Wed, 15 Aug 2018 18:41:24 GMT
