--- a/www.nass.gov.ng/3a820ebeaa3820fbf80a41bded09660637e27e17.yml
+++ b/www.nass.gov.ng/3a820ebeaa3820fbf80a41bded09660637e27e17.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:33:54 GMT
+    - Wed, 15 Aug 2018 18:44:48 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=9%2CGLpcU5Y6cKKW-e%2CBirS2; path=/
+    - PHPSESSID=%2CKtye2wsSg6CXKdYFeiU60; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:33:55 GMT
+recorded_at: Wed, 15 Aug 2018 18:44:49 GMT
