--- a/www.nass.gov.ng/312eef1a4e73bbf80ba5f5d54d8b4e6e572e50da.yml
+++ b/www.nass.gov.ng/312eef1a4e73bbf80ba5f5d54d8b4e6e572e50da.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:34:48 GMT
+    - Wed, 15 Aug 2018 18:46:09 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=u6l1KdXXDF%2CRxWhORfwUk0; path=/
+    - PHPSESSID=gGaad7Gs-aBKLCNJC5eSL3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:34:48 GMT
+recorded_at: Wed, 15 Aug 2018 18:46:10 GMT
