--- a/www.nass.gov.ng/8d0749d375753b7013eac510f1f1483775b1ce3a.yml
+++ b/www.nass.gov.ng/8d0749d375753b7013eac510f1f1483775b1ce3a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:46:52 GMT
+    - Wed, 15 Aug 2018 18:58:01 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2AlB6PrrARoXn%2C-h7pfTl1; path=/
+    - PHPSESSID=ABy7UpZ-sQ3mJJ8qmBzZC0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:46:53 GMT
+recorded_at: Wed, 15 Aug 2018 18:58:01 GMT
