--- a/www.nass.gov.ng/09ee964da8d5d1cb1412728efb96a06b437ff13e.yml
+++ b/www.nass.gov.ng/09ee964da8d5d1cb1412728efb96a06b437ff13e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:55:57 GMT
+    - Wed, 15 Aug 2018 19:05:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=FmLQu%2ClTdegfPY9edJSNa2; path=/
+    - PHPSESSID=DuV%2CjeGlQ4BI2YDo5Jait1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:55:57 GMT
+recorded_at: Wed, 15 Aug 2018 19:05:32 GMT
