--- a/www.nass.gov.ng/b425208a404acf15eae1b5d6cda9423f110ca4b2.yml
+++ b/www.nass.gov.ng/b425208a404acf15eae1b5d6cda9423f110ca4b2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:57:05 GMT
+    - Wed, 15 Aug 2018 19:06:26 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vW5eu9FFaw7%2C9koagqLZ72; path=/
+    - PHPSESSID=anJQSO0O6ojq4uI7-ZcQV1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:57:05 GMT
+recorded_at: Wed, 15 Aug 2018 19:06:26 GMT
