--- a/www.nass.gov.ng/8dc803729fd6a483a83e52b7b45aa5ab5b436297.yml
+++ b/www.nass.gov.ng/8dc803729fd6a483a83e52b7b45aa5ab5b436297.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Mon, 13 Aug 2018 23:59:02 GMT
+    - Wed, 15 Aug 2018 19:07:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7MKhUSGpXCZop-4i%2CYnuZ1; path=/
+    - PHPSESSID=EJuSza5aNDA9y-ipBR7fz0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Mon, 13 Aug 2018 23:59:03 GMT
+recorded_at: Wed, 15 Aug 2018 19:07:59 GMT
