--- a/www.nass.gov.ng/6e1078bf85a5048537c386a181a60ecc0603d0f6.yml
+++ b/www.nass.gov.ng/6e1078bf85a5048537c386a181a60ecc0603d0f6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:04:08 GMT
+    - Wed, 15 Aug 2018 19:14:28 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=RTo61MvICA0YXdM5DG4Xs3; path=/
+    - PHPSESSID=d7hN%2CLPeuwQqqrHfHnjw63; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:04:08 GMT
+recorded_at: Wed, 15 Aug 2018 19:14:28 GMT
