--- a/www.nass.gov.ng/b5bc97cbc3a23f4311ab54f026cd3682936f9064.yml
+++ b/www.nass.gov.ng/b5bc97cbc3a23f4311ab54f026cd3682936f9064.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:05:21 GMT
+    - Wed, 15 Aug 2018 19:16:00 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2Ce1F88fp3huLIkwSql9GB1; path=/
+    - PHPSESSID=DpGO5bwYyc-9O9EQojT6f0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:05:21 GMT
+recorded_at: Wed, 15 Aug 2018 19:16:01 GMT
