--- a/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
+++ b/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:09:58 GMT
+    - Wed, 15 Aug 2018 19:20:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=7XpqtI6Ah-lCRGwNMqJiS2; path=/
+    - PHPSESSID=4dR3NkH1ac91dKjUjnbX%2C3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:09:59 GMT
+recorded_at: Wed, 15 Aug 2018 19:20:37 GMT
