--- a/www.nass.gov.ng/b88f0bb0e2e9004b3f5c25c98e5787dad1c99b18.yml
+++ b/www.nass.gov.ng/b88f0bb0e2e9004b3f5c25c98e5787dad1c99b18.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:13:52 GMT
+    - Wed, 15 Aug 2018 19:24:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=vndLPKQKW%2CqK8CRx8luQr1; path=/
+    - PHPSESSID=EgWjT6Mbjf%2C5IvqxDcf0-2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:13:53 GMT
+recorded_at: Wed, 15 Aug 2018 19:24:59 GMT
