--- a/www.nass.gov.ng/4067434b512adc3c7ecda3222216195ea7dfefc2.yml
+++ b/www.nass.gov.ng/4067434b512adc3c7ecda3222216195ea7dfefc2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:15:36 GMT
+    - Wed, 15 Aug 2018 19:26:29 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=wh%2CzQnqYJSMd9pc4ZqSt93; path=/
+    - PHPSESSID=Xp1KX3HVc%2CTrvWT1ct-vB2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:15:36 GMT
+recorded_at: Wed, 15 Aug 2018 19:26:29 GMT
