--- a/www.nass.gov.ng/27ce523e4a5fe1776ba40f8ef4da2abc86cc062f.yml
+++ b/www.nass.gov.ng/27ce523e4a5fe1776ba40f8ef4da2abc86cc062f.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:18:13 GMT
+    - Wed, 15 Aug 2018 19:29:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Zo4YtQrrWebHV3QOXOTSg2; path=/
+    - PHPSESSID=WOhNR%2CA7JAbnfs8MXGLq-0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:18:14 GMT
+recorded_at: Wed, 15 Aug 2018 19:29:58 GMT
