--- a/www.nass.gov.ng/fcabc9f11ebb6a4797d79749745da6723cd60df2.yml
+++ b/www.nass.gov.ng/fcabc9f11ebb6a4797d79749745da6723cd60df2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:20:45 GMT
+    - Wed, 15 Aug 2018 19:32:35 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=t3X0RIU1YP-xDKTjIvB%2CA1; path=/
+    - PHPSESSID=-CJJ2joDF5OWT7794phD-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:20:45 GMT
+recorded_at: Wed, 15 Aug 2018 19:32:35 GMT
