--- a/www.nass.gov.ng/03a2d417e121e1a87cbc8cb61de14351c9a81f6d.yml
+++ b/www.nass.gov.ng/03a2d417e121e1a87cbc8cb61de14351c9a81f6d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:24:02 GMT
+    - Wed, 15 Aug 2018 19:36:40 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=%2CObE5kae6iiSkxP98O4y90; path=/
+    - PHPSESSID=av63kpSWkSFR4xLlmW9bd1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:24:03 GMT
+recorded_at: Wed, 15 Aug 2018 19:36:40 GMT
