--- a/www.nass.gov.ng/57805d22a9cf3ee7eceba782e7b828d385539848.yml
+++ b/www.nass.gov.ng/57805d22a9cf3ee7eceba782e7b828d385539848.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:26:11 GMT
+    - Wed, 15 Aug 2018 19:38:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Ojn1zKIPVD%2CS8ErZhPD5A3; path=/
+    - PHPSESSID=Kp8JpVvZrcRKt2RcRQTo-3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:26:11 GMT
+recorded_at: Wed, 15 Aug 2018 19:38:59 GMT
