--- a/www.nass.gov.ng/64c4be372fe402a93d60bd68cbf880b016e9789c.yml
+++ b/www.nass.gov.ng/64c4be372fe402a93d60bd68cbf880b016e9789c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:29:48 GMT
+    - Wed, 15 Aug 2018 19:41:58 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=E59IgRDTdsfayIGjh%2Ch4M0; path=/
+    - PHPSESSID=gYKHr0BjiQhEBFnT7PyeL1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:29:48 GMT
+recorded_at: Wed, 15 Aug 2018 19:41:59 GMT
