--- a/www.nass.gov.ng/619ea08077f40cf9bfb76066062eb294dd3a98b8.yml
+++ b/www.nass.gov.ng/619ea08077f40cf9bfb76066062eb294dd3a98b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:36:07 GMT
+    - Wed, 15 Aug 2018 19:47:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=UDwHXcUmM01TvHolZtMLj2; path=/
+    - PHPSESSID=kSCxL-GJLda%2CpeiFDqlLe0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:36:07 GMT
+recorded_at: Wed, 15 Aug 2018 19:47:57 GMT
