--- a/www.nass.gov.ng/f3fccfd7b16a0b15ea5c6a69e899ff832ce5e903.yml
+++ b/www.nass.gov.ng/f3fccfd7b16a0b15ea5c6a69e899ff832ce5e903.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:42:35 GMT
+    - Wed, 15 Aug 2018 19:55:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=n07YlQ0DqEPOp8eKLlhYm3; path=/
+    - PHPSESSID=nx2wI1qfIOGB2jW%2C9mInZ1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:42:35 GMT
+recorded_at: Wed, 15 Aug 2018 19:55:17 GMT
