--- a/www.nass.gov.ng/5e91dbaaaca10266955e9d3d9239ceeee0bd3970.yml
+++ b/www.nass.gov.ng/5e91dbaaaca10266955e9d3d9239ceeee0bd3970.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:49:03 GMT
+    - Wed, 15 Aug 2018 20:00:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=B781HGENNxyEUQKK7crjb0; path=/
+    - PHPSESSID=i-v6dA%2CNHXwFwkad6TDLR1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:49:03 GMT
+recorded_at: Wed, 15 Aug 2018 20:00:07 GMT
