200 OK https://www.nass.gov.ng/mp/profile/437

--- a/www.nass.gov.ng/170a19f4bee6f300aa90fd56a9d454774603ad05.yml
+++ b/www.nass.gov.ng/170a19f4bee6f300aa90fd56a9d454774603ad05.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:49:57 GMT
+    - Wed, 15 Aug 2018 20:01:08 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=NriGHIlewm%2CDtsowz3tsx0; path=/
+    - PHPSESSID=ZA9SnYnJVc67HmkW-dXD30; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:49:57 GMT
+recorded_at: Wed, 15 Aug 2018 20:01:08 GMT
