--- a/www.nass.gov.ng/96b28f6b0a4bf463c4457f5424c10dfc6b655a2a.yml
+++ b/www.nass.gov.ng/96b28f6b0a4bf463c4457f5424c10dfc6b655a2a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:55:55 GMT
+    - Wed, 15 Aug 2018 20:06:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=3Go3wtiizQetDGo45K5Lz0; path=/
+    - PHPSESSID=la8iYV0Rq%2CBN027NnVLZ03; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:55:56 GMT
+recorded_at: Wed, 15 Aug 2018 20:06:54 GMT
