--- a/www.nass.gov.ng/51ecac0e8fadcc9552b93def086eef0ba267e85e.yml
+++ b/www.nass.gov.ng/51ecac0e8fadcc9552b93def086eef0ba267e85e.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 00:59:17 GMT
+    - Wed, 15 Aug 2018 20:09:39 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=OhAWaczQ1ZYbD%2CCGIknss1; path=/
+    - PHPSESSID=TW8FrURZvNe6KWfd6E5zv1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 00:59:18 GMT
+recorded_at: Wed, 15 Aug 2018 20:09:39 GMT
