--- a/www.nass.gov.ng/e8f78eddabbb8e85daac394fb8043d0b991a6784.yml
+++ b/www.nass.gov.ng/e8f78eddabbb8e85daac394fb8043d0b991a6784.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:06:17 GMT
+    - Wed, 15 Aug 2018 20:17:17 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=MvPUl%2CwmhxIvVQDdFfQIf0; path=/
+    - PHPSESSID=hNhGQiLAWkJlIlUIUspWa3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:06:17 GMT
+recorded_at: Wed, 15 Aug 2018 20:17:18 GMT
