--- a/www.nass.gov.ng/54290f62ca372d07a87ed2ea40785c0da0045cb6.yml
+++ b/www.nass.gov.ng/54290f62ca372d07a87ed2ea40785c0da0045cb6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:08:46 GMT
+    - Wed, 15 Aug 2018 20:20:06 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=kBEOzDKRinzqybT5hiOKW1; path=/
+    - PHPSESSID=KXi4Q9l2ilT%2CUpxLddmll0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:08:46 GMT
+recorded_at: Wed, 15 Aug 2018 20:20:09 GMT
