--- a/www.nass.gov.ng/1fab94481472e6b5afc555d7bdb273812cb3f480.yml
+++ b/www.nass.gov.ng/1fab94481472e6b5afc555d7bdb273812cb3f480.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:15:27 GMT
+    - Wed, 15 Aug 2018 20:29:46 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=qEP5i5-1JTtEKSf0-7fk20; path=/
+    - PHPSESSID=N%2CXJClOv2EQmcbcuuClRH0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:15:27 GMT
+recorded_at: Wed, 15 Aug 2018 20:29:47 GMT
