--- a/www.nass.gov.ng/c3f70976e27eaf187447a421ab944e670222e769.yml
+++ b/www.nass.gov.ng/c3f70976e27eaf187447a421ab944e670222e769.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:17:59 GMT
+    - Wed, 15 Aug 2018 20:32:55 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=rfTDQL1wQwXal-EEZ9CL30; path=/
+    - PHPSESSID=ISaWQNWcbygx%2CHVilup1Q2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:18:00 GMT
+recorded_at: Wed, 15 Aug 2018 20:32:55 GMT
