--- a/www.nass.gov.ng/a7bc639500c77586fea1b9f1488b37a5fc278186.yml
+++ b/www.nass.gov.ng/a7bc639500c77586fea1b9f1488b37a5fc278186.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:21:44 GMT
+    - Wed, 15 Aug 2018 20:36:45 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zEbpOm31TcoNr6P78e5iz1; path=/
+    - PHPSESSID=NptQ1-Gy%2CLcmN9aILqRcV0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:21:45 GMT
+recorded_at: Wed, 15 Aug 2018 20:36:45 GMT
