200 OK https://www.nass.gov.ng/mp/profile/540

--- a/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
+++ b/www.nass.gov.ng/f9b74161cefbb16526b1ba09a715bf2792c977f1.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 01:56:04 GMT
+    - Wed, 15 Aug 2018 21:13:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=QQARC5pm%2CO2M7DxJmfMN%2C1; path=/
+    - PHPSESSID=wsikliq7gIEwQoSpK2WeB3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 01:56:04 GMT
+recorded_at: Wed, 15 Aug 2018 21:13:10 GMT
