200 OK https://www.nass.gov.ng/mp/profile/551

--- a/www.nass.gov.ng/eb6edc7a55456d79d4786d404e33acf3964f17c4.yml
+++ b/www.nass.gov.ng/eb6edc7a55456d79d4786d404e33acf3964f17c4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:22:25 GMT
+    - Wed, 15 Aug 2018 21:39:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=e-PjFg4MoCdfD0Mkxgfe%2C3; path=/
+    - PHPSESSID=ttDODiE8y3iZ1L7ufvDD32; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:22:25 GMT
+recorded_at: Wed, 15 Aug 2018 21:39:30 GMT
