200 OK https://www.nass.gov.ng/mp/profile/664

--- a/www.nass.gov.ng/16e8beaca1db4c47a7949042d14d3f85510750fa.yml
+++ b/www.nass.gov.ng/16e8beaca1db4c47a7949042d14d3f85510750fa.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Tue, 14 Aug 2018 02:27:55 GMT
+    - Wed, 15 Aug 2018 21:45:07 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=bCrOPR%2C1j3GT%2Cu4CYb3ZV2; path=/
+    - PHPSESSID=nPvmaG18J50ew9iA4dPbO0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Tue, 14 Aug 2018 02:27:55 GMT
+recorded_at: Wed, 15 Aug 2018 21:45:07 GMT
