200 OK https://www.nass.gov.ng/mp/profile/560

--- a/www.nass.gov.ng/eda3fe8610f37676d2e61425169b0efc307eeb3d.yml
+++ b/www.nass.gov.ng/eda3fe8610f37676d2e61425169b0efc307eeb3d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 14:17:58 GMT
+    - Thu, 16 Aug 2018 11:15:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=hfo8YhiX%2CaYLiYwki5XWE2; path=/
+    - PHPSESSID=DpnNtiaX0tUxb1-9Ld9hv0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 14:17:58 GMT
+recorded_at: Thu, 16 Aug 2018 11:16:00 GMT
