200 OK https://www.nass.gov.ng/mp/profile/192

--- a/www.nass.gov.ng/4396013797159a3010da179d2f61592b822768b2.yml
+++ b/www.nass.gov.ng/4396013797159a3010da179d2f61592b822768b2.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:03:16 GMT
+    - Thu, 16 Aug 2018 13:15:05 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=Mi-own0i1U3E1WU8q007w0; path=/
+    - PHPSESSID=2NpUi3c8x2dT-NuD9G1%2C-0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:03:16 GMT
+recorded_at: Thu, 16 Aug 2018 13:15:05 GMT
