200 OK https://www.nass.gov.ng/mp/profile/753

--- a/www.nass.gov.ng/3235eb9d18cc5ad1ed7575e88076234e8611b0bd.yml
+++ b/www.nass.gov.ng/3235eb9d18cc5ad1ed7575e88076234e8611b0bd.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 16:13:29 GMT
+    - Thu, 16 Aug 2018 13:27:32 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=CjgpyOUk11ZCvt6vlm5xj2; path=/
+    - PHPSESSID=k60c7e%2CJ0%2CC5R1Jtn47jv1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 16:13:29 GMT
+recorded_at: Thu, 16 Aug 2018 13:27:33 GMT
