200 OK https://www.nass.gov.ng/mp/profile/832

--- a/www.nass.gov.ng/c05f8916b0d8194647630b6b6d0e10196924421a.yml
+++ b/www.nass.gov.ng/c05f8916b0d8194647630b6b6d0e10196924421a.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 18:02:43 GMT
+    - Thu, 16 Aug 2018 15:18:15 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=K6Y%2Ca6juu4QS989EoyxOT0; path=/
+    - PHPSESSID=mjSHdMpDq%2C63YiV7X824K2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 18:02:44 GMT
+recorded_at: Thu, 16 Aug 2018 15:18:16 GMT
