200 OK https://www.nass.gov.ng/mp/profile/765

--- a/www.nass.gov.ng/a647f19dbb4feb5590ced0e9d2040413572b8017.yml
+++ b/www.nass.gov.ng/a647f19dbb4feb5590ced0e9d2040413572b8017.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:00:59 GMT
+    - Thu, 16 Aug 2018 16:15:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=HhiEJqP08X7DCEWyHwaM43; path=/
+    - PHPSESSID=-%2ClJyKi87qAMK7Dl4MdYk0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:00:59 GMT
+recorded_at: Thu, 16 Aug 2018 16:15:54 GMT
