200 OK https://www.nass.gov.ng/mp/profile/805

--- a/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
+++ b/www.nass.gov.ng/b50774622636f1394e913b10f40b89b9c3e789e6.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:20:37 GMT
+    - Thu, 16 Aug 2018 16:34:59 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=4dR3NkH1ac91dKjUjnbX%2C3; path=/
+    - PHPSESSID=LiH3mLwmb51NZjFTD%2C9tM1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:20:37 GMT
+recorded_at: Thu, 16 Aug 2018 16:34:59 GMT
