200 OK https://www.nass.gov.ng/mp/profile/316

--- a/www.nass.gov.ng/9a9e468c6c4ce65f350621bb3f6d2854b7ecd76d.yml
+++ b/www.nass.gov.ng/9a9e468c6c4ce65f350621bb3f6d2854b7ecd76d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:30:46 GMT
+    - Thu, 16 Aug 2018 16:44:47 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=JcC%2CibSW9BhTvvU7AKOmc0; path=/
+    - PHPSESSID=CUb96wzskRckgN2hVw8QE0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:30:46 GMT
+recorded_at: Thu, 16 Aug 2018 16:44:47 GMT
