200 OK https://www.nass.gov.ng/mp/profile/644

--- a/www.nass.gov.ng/2acc23cbeb12106e8afe1976a877209509d28d08.yml
+++ b/www.nass.gov.ng/2acc23cbeb12106e8afe1976a877209509d28d08.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 19:39:54 GMT
+    - Thu, 16 Aug 2018 16:53:31 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=N43SBqxE4KVXq8NBQTi1W0; path=/
+    - PHPSESSID=%2CeZ2phk219sYlJBCuRH2q2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 19:39:54 GMT
+recorded_at: Thu, 16 Aug 2018 16:53:31 GMT
