200 OK https://www.nass.gov.ng/mp/profile/683

--- a/www.nass.gov.ng/4b3b71ccadf1a0c0842e2cb4de38be09691d7a0c.yml
+++ b/www.nass.gov.ng/4b3b71ccadf1a0c0842e2cb4de38be09691d7a0c.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 20:54:33 GMT
+    - Thu, 16 Aug 2018 18:01:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=yccUEaZIPQZ0mj0PLoVpV1; path=/
+    - PHPSESSID=cqM0FhmJ%2C83MB0NEIOrIA2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 20:54:33 GMT
+recorded_at: Thu, 16 Aug 2018 18:01:58 GMT
