200 OK https://www.nass.gov.ng/mp/profile/962

--- a/www.nass.gov.ng/dd7506a8150779c55761e54ca99439a5deebef07.yml
+++ b/www.nass.gov.ng/dd7506a8150779c55761e54ca99439a5deebef07.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:12:17 GMT
+    - Thu, 16 Aug 2018 18:22:54 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=WmKwkqUKsRnLaPw2SX2nt1; path=/
+    - PHPSESSID=4R0uU82aWBiAjjAFiS%2CCv2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:12:17 GMT
+recorded_at: Thu, 16 Aug 2018 18:22:54 GMT
