200 OK https://www.nass.gov.ng/mp/profile/798

--- a/www.nass.gov.ng/6490e023ce758caf7e874882c96ce9b5bb4778a4.yml
+++ b/www.nass.gov.ng/6490e023ce758caf7e874882c96ce9b5bb4778a4.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:30:04 GMT
+    - Thu, 16 Aug 2018 18:39:19 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=H8yelcDURT4rN-1uhRPoo2; path=/
+    - PHPSESSID=1dtNF%2C5-4wO4y8oMMggTf2; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:30:04 GMT
+recorded_at: Thu, 16 Aug 2018 18:39:19 GMT
