200 OK https://www.nass.gov.ng/mp/profile/635

--- a/www.nass.gov.ng/67e0ae8f7fdb624d64489322057aef9166690f5d.yml
+++ b/www.nass.gov.ng/67e0ae8f7fdb624d64489322057aef9166690f5d.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Wed, 15 Aug 2018 21:43:21 GMT
+    - Thu, 16 Aug 2018 18:51:43 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=behB9qLKeTTz4diwtlKer2; path=/
+    - PHPSESSID=LxNbLRS1V1Rj2%2CSh1vN4D0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Wed, 15 Aug 2018 21:43:21 GMT
+recorded_at: Thu, 16 Aug 2018 18:51:44 GMT
