200 OK https://www.nass.gov.ng/mp/profile/598

--- a/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
+++ b/www.nass.gov.ng/1c2d95329d2716f9b0f7a3851c246b13bd23e8ce.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 10:34:07 GMT
+    - Fri, 17 Aug 2018 20:50:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=mnNzMaiOE8C%2C5OTUXnCTI3; path=/
+    - PHPSESSID=5oQV0R8kgZAt2sYGEPbyt0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 10:34:07 GMT
+recorded_at: Fri, 17 Aug 2018 20:50:58 GMT
