200 OK https://www.nass.gov.ng/mp/profile/437

--- a/www.nass.gov.ng/170a19f4bee6f300aa90fd56a9d454774603ad05.yml
+++ b/www.nass.gov.ng/170a19f4bee6f300aa90fd56a9d454774603ad05.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Thu, 16 Aug 2018 17:14:48 GMT
+    - Sat, 18 Aug 2018 03:10:37 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=zyzS%2Cc%2C9GtX1ih08BiTYQ3; path=/
+    - PHPSESSID=R3nOhX1nUqVvhqmGpDpWN3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Thu, 16 Aug 2018 17:14:48 GMT
+recorded_at: Sat, 18 Aug 2018 03:10:37 GMT
