200 OK https://www.nass.gov.ng/mp/profile/535

--- a/www.nass.gov.ng/82298a489b846135d746b23b641ad21143e5a012.yml
+++ b/www.nass.gov.ng/82298a489b846135d746b23b641ad21143e5a012.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 21:12:59 GMT
+    - Sun, 19 Aug 2018 07:54:30 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=GR0tCJnGpLc5X5r8p4Q0L3; path=/
+    - PHPSESSID=ZrjvRooqO7Oky4K%2CxJcM31; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 21:13:00 GMT
+recorded_at: Sun, 19 Aug 2018 07:54:30 GMT
