200 OK https://www.nass.gov.ng/mp/profile/958

--- a/www.nass.gov.ng/496c0b3e62ceafe38789906b5d9a1501a4b241e3.yml
+++ b/www.nass.gov.ng/496c0b3e62ceafe38789906b5d9a1501a4b241e3.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Fri, 17 Aug 2018 22:40:13 GMT
+    - Sun, 19 Aug 2018 09:25:56 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=2ZIurE%2CW%2CDjFLnw7AfT6Q1; path=/
+    - PHPSESSID=AQ9r7cnjZFyQ%2C9ibdynlE3; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Fri, 17 Aug 2018 22:40:13 GMT
+recorded_at: Sun, 19 Aug 2018 09:25:57 GMT
