200 OK https://www.nass.gov.ng/mp/profile/831

--- a/www.nass.gov.ng/8a27af1a9d423355f5db8f5be9675c38fbcd59b9.yml
+++ b/www.nass.gov.ng/8a27af1a9d423355f5db8f5be9675c38fbcd59b9.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sat, 18 Aug 2018 04:56:54 GMT
+    - Sun, 19 Aug 2018 15:27:57 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=eeond7SpYcZjKsx7PUe452; path=/
+    - PHPSESSID=UCtr2k6Fow6DqFpZ8%2CtMK1; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sat, 18 Aug 2018 04:56:54 GMT
+recorded_at: Sun, 19 Aug 2018 15:27:57 GMT
