200 OK https://www.nass.gov.ng/mp/profile/770

--- a/www.nass.gov.ng/a2dcd916b4d00f23ebacecb79623c55eb24e34b8.yml
+++ b/www.nass.gov.ng/a2dcd916b4d00f23ebacecb79623c55eb24e34b8.yml
@@ -18,7 +18,7 @@ response:
     message: OK
   headers:
     Date:
-    - Sun, 19 Aug 2018 07:30:55 GMT
+    - Mon, 20 Aug 2018 21:54:10 GMT
     Server:
     - Apache
     Expires:
@@ -28,7 +28,7 @@ response:
     Pragma:
     - no-cache
     Set-Cookie:
-    - PHPSESSID=L2ypr8EIziLAGlP13D7fH1; path=/
+    - PHPSESSID=s-fAy3Z9mIyM%2CMh1ei7lO0; path=/
     Content-Type:
     - text/html; charset=UTF-8
     Content-Length:
@@ -36,4 +36,4 @@ response:
   body:
     encoding: UTF-8
   http_version: 
-recorded_at: Sun, 19 Aug 2018 07:30:55 GMT
+recorded_at: Mon, 20 Aug 2018 21:54:10 GMT
